--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "weblog-project",
     "version": "1.0.0",
-    "description": "Simple weblog",
+    "description": " weblog",
     "main": "app.js",
     "scripts": {
         "start": "cross-env NODE_ENV=production node app",
