--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.1",
         "mongoose": "^5.10.9",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "cross-env": "^7.0.2"
