--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "connect-flash": "^0.1.1",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.1",
+        "express-session": "^1.17.3",
         "mongoose": "^5.10.9",
         "morgan": "^1.10.0",
         "yup": "^0.32.11"
