--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "connect-flash": "^0.1.1",
+        "connect-mongo": "^4.6.0",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
