--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-    "name": "weblog-project",
-    "version": "1.0.0",
-    "description": " weblog",
-    "main": "app.js",
-    "scripts": {
-        "start": "cross-env NODE_ENV=production node app",
-        "dev": "cross-env NODE_ENV=development nodemon app"
-    },
-    "keywords": [],
-    "author": "Younes Ghorbany",
-    "license": "MIT",
-    "dependencies": {
-        "bcrypt": "^5.1.0",
-        "connect-flash": "^0.1.1",
-        "connect-mongo": "^4.6.0",
-        "dotenv": "^8.2.0",
-        "ejs": "^3.1.5",
-        "express": "^4.17.1",
-        "express-ejs-layouts": "^2.5.1",
-        "express-session": "^1.17.3",
-        "mongoose": "^5.10.9",
-        "morgan": "^1.10.0",
-        "passport": "^0.6.0",
-        "passport-local": "^1.0.0",
-        "yup": "^0.32.11"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0.2"
-    }
+  "name": "weblog-project",
+  "version": "1.0.0",
+  "description": " weblog",
+  "main": "app.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node app",
+    "dev": "cross-env NODE_ENV=development DEBUG=Weblog nodemon app"
+  },
+  "keywords": [],
+  "author": "Younes Ghorbany",
+  "license": "MIT",
+  "dependencies": {
+    "app-root-path": "^3.1.0",
+    "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "debug": "^4.3.4",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "winston": "^3.8.2",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
+  }
 }
