--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "debug": "^4.3.4",
@@ -23,6 +24,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "winston": "^3.8.2",
