--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_URI = mongodb://localhost:27017/blog_db
 CAPTCHA_SECRET = 6Lfn20MkAAAAABN0PqcCl7WDEKP9n3o6SiNPEokb
+SESSION_SECRET = pass1234
