--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express-session": "^1.17.3",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "yup": "^0.32.11"
   },
