--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "yup": "^0.32.11"
